@@ -79,8 +79,6 @@ $parents = array("profile.php" => "home.php",
 		 "do-renew-slice.php" => "slice.php",
 		 "sliverdelete.php" => "slice.php",
 		 "sliverstatus.php" => "slice.php",
-		 "add-slice-note.php" => "slice.php",
-		 "add-project-note.php" => "project.php",
 		 "downloadkeycert.php" => "profile.php",
 		 "invite-to-geni.php" => "home.php",
 		 "invite-to-project.php" => "project.php",
@@ -137,8 +135,6 @@ $names = array("home.php" => $TAB_HOME,
 		 "sliceresource.php" => "Add resources to Slice %slice_name",
 		 "sliverdelete.php" => "Delete Sliver from %slice_name",
 		 "sliverstatus.php" => "Sliver Status for %slice_name",
-		 "add-slice-note.php" => "Add Note on %slice_name",
-		 "add-project-note.php" => "Add Note on %project_name",
 		 "do-renew.php" => "Renew Sliver on %slice_name",
 		 "do-renew-slice.php" => "Renew Slice %slice_name",
 	         "downloadkeycert.php" => "Download Certificate and Key",
